--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,20 +1,15 @@
-.App {
+.crossword-app {
   text-align: center;
-}
-
-.App-header {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   font-size: calc(10px + 2vmin);
 }
 
-.cell_selected {
-  background-color: aliceblue;
-}
-
-.cell_chosen {
-  background-color: #cce7ff;
+.crossword-app__main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
