--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,4 +1,4 @@
-.crossword-app {
+.app {
   text-align: center;
   min-height: 100vh;
   display: flex;
@@ -7,7 +7,7 @@
   font-size: 18px;
 }
 
-.crossword-app__main {
+.app__main {
   flex-grow: 1;
   display: flex;
   align-items: center;
