--- a/src/components/CrosswordTable/style.css
+++ b/src/components/CrosswordTable/style.css
@@ -1,5 +1,6 @@
 .table {
   border-collapse: collapse;
+  user-select: none;
 }
 
 .table__cell {
@@ -7,6 +8,7 @@
   border: 1px solid black;
   height: 24px;
   width: 24px;
+  text-align: center;
 }
 
 .table__cell_selected {
