--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,16 +1,23 @@
 .app {
   min-height: 100vh;
+  height: 100vh;
   display: flex;
   flex-direction: column;
   font-size: 18px;
 }
 
 .main {
+  display: flex;
+  flex-direction: column;
   flex-grow: 1;
 }
 .main__container {
   min-width: 768px;
   width: 768px;
   margin: 0 auto;
-  padding: 12px 32px;
+  padding: 20px 32px;
+
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
